--- a/online_viewer_net (5).htm
+++ b/online_viewer_net (5).htm
@@ -2,111 +2,101 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>JMB Printing Services</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JMB PRINTING SERVICES</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-color: #20B2AA; /* Blue Green */
+      font-family: 'Century Gothic', sans-serif;
       margin: 0;
-      color: #333;
-    }
-    header {
-      background: rgba(0, 0, 0, 0.6);
       color: white;
+    }
+    header, footer {
+      background-color: cyan;
+      color: black;
       text-align: center;
       padding: 20px;
     }
+    header img {
+      max-width: 200px;
+    }
     nav a {
-      margin: 10px;
-      color: #fff;
+      margin: 0 15px;
+      color: ;
       text-decoration: none;
       font-weight: bold;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      background: rgba(255, 255, 255, 0.8);
-      margin: 20px;
+    main {
       padding: 20px;
-      border-radius: 10px;
     }
     table {
       width: 100%;
+      background: white;
+      color: black;
       border-collapse: collapse;
-      background: #fff;
     }
     th, td {
-      border: 1px solid #000;
-      padding: 8px;
-      text-align: center;
-    }
-    .cart {
-      background: #fff;
+      border: 1px solid #333;
       padding: 10px;
-    }
-    footer {
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 10px;
-    }
-    input[type='number'] {
-      width: 50px;
     }
     button {
-      padding: 5px 10px;
-      cursor: pointer;
+      padding: 10px;
+      margin: 5px;
     }
-    img {
-      max-width: 100px;
+    .section {
+      margin: 40px 0;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+    }
+    .gallery img {
+      width: 200px;
+      margin: 10px;
+    }
+    input, textarea {
+      width: 100%;
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <img src="logo.png" alt="Logo" width="100">
-    <h1>JMB Printing Services</h1>
-    <p>High Quality Prints</p>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#profile">Admin Profile</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact Us</a>
-      <a href="#activities">Latest Activities</a>
-      <a href="#download">Download</a>
-    </nav>
-  </header>
+<header>
+  <img src="E:\JMB PRINTING SERVICES-LOYALTY CARD ID/Colorful_Printing_and_Digital_Shop_Logo__1_-removebg-preview.png" alt="Logo">
+  <img src="E:\LOYALTY CARD/Untitled_design-removebg-preview.png" alt="Logo">
+  <h1>JMB PRINTING SERVICES</h1>
+  <p>HIGH QUALITY PRINTS</p>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#download">Download</a>
+    <a href="#contact">Contact Us</a>
+    <a href="#profile">Profile</a>
+    <a href="#activity">Latest Activity</a>
+    <a href="#registration">Register Loyalty Card</a>
+  </nav>
+</header>
 
+<main>
   <section id="home">
-    <h2>Pricing Table</h2>
-    <table id="pricing">
-      <tr>
-        <th>Item</th><th>Price</th><th>Picture</th><th>Qty</th><th>Add</th>
-      </tr>
+    <h2>Items & Pricing</h2>
+    <table id="itemsTable">
+      <tr><th>Item</th><th>Price</th><th>Qty</th><th>Action</th></tr>
     </table>
-    <div class="cart">
-      <h3>View Cart</h3>
-      <ul id="cart"></ul>
-      <p>Total: ₱<span id="total">0</span></p>
-      <p>Note: Please review your order before checkout.</p>
-      <button onclick="checkout()">Checkout</button>
-    </div>
-    <h3>Payment</h3>
-    <p>GCASH: Jorenz M. Balbuena | 09931109148</p>
-    <p>BPI: Jorenz M. Balbuena | 090931796</p>
+    <button onclick="viewCart()">View Cart</button>
+    <button onclick="checkout()">Checkout</button>
+    <p>Before checkout, double-check items. For ID/Photo printing, send your pictures to JMBPRINTINGSERVICES12@GMAIL.COM. For book binding and document printing, send PDF/DOC files to the same email.</p>
   </section>
 
-  <section>
-    <h2>Video</h2>
-    <video controls width="100%" src="lv_0_20250607190238.mp4"></video>
-    <h3>Lyrics</h3>
-    <p>JMB Printing Services (Tagalog Jingle)
+  <section class="section">
+    <h2>Video Jingle & Lyrics</h2>
+    <video controls width="100%">
+      <source src="E:\IKAGES/JMB.mp4" type="video/mp4">
+    </video>
+    <p>Lyrics: JMB Printing Services (Tagalog Jingle)
 
 (Verse 1)
+
 Sa bawat okasyon, kami’y handa,
 Mga print mo, siguradong maganda.
 Tarpaulin, sticker, ID, calling card,
@@ -139,130 +129,156 @@ JMB Printing Services —
 Laging nandyan, laging maaasahan!</p>
   </section>
 
-  <section>
-    <h2>Calendar</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=en.philippines%23holiday%40group.v.calendar.google.com" width="100%" height="400"></iframe>
+  <section class="section">
+    <h2>Partners</h2>
+    <img src="E:\IKAGES/GCASH.jpg" alt="GCash" width="100">
+    <img src="E:\IKAGES/DTI.png" alt="DTI" width="100">
+    <img src="E:\IKAGES/Bank_of_the_Philippine_Islands_logo.svg.png" alt="BPI" width="100">
   </section>
 
-  <section>
-    <h2>Philippine Standard Time</h2>
-    <h3 id="clock">00:00:00 PM</h3>
+  <section class="section">
+    <h2>Mission & Vision</h2>
+    <p><strong>Mission:</strong>At JMB Printing Services, our mission is to deliver high-quality, affordable, and customized printing solutions that help individuals and businesses bring their ideas to life. We are committed to providing exceptional customer service, innovative designs, and fast turnaround times to meet the evolving needs of our clients.</p>
+    <p><strong>Vision:</strong> To become a leading and trusted printing service provider in the region, known for creativity, reliability, and excellence. We aim to empower our community by making professional printing accessible and impactful for all.</p>
   </section>
 
-  <section id="profile">
-    <h2>Admin Profile</h2>
-    <img src="image-removebg-preview (1).png" alt="Admin Picture" width="150">
-    <h3>Jorenz M. Balbuena</h3>
-    <img src="signature.png" alt="Signature" width="200">
-    <p>History: Jorenz M. Balbuena founded JMB Printing Services to provide high quality prints to the local community of Calatagan, Batangas. The company partners with local government and financial institutions for community support.</p>
-  </section>
-
-  <section id="gallery">
+  <section class="section gallery">
     <h2>Gallery</h2>
-    <h3>DTI Certificate</h3>
-    <img src="dti_certificate.png" alt="DTI Certificate" width="300">
-    <h3>Partners</h3>
-    <img src="Bank_of_the_Philippine_Islands_logo.svg.png" alt="BPI" width="100">
-    <img src="481286030_1152943976870391_5102155035795616500_n.jpg" alt="GCASH" width="100">
-    <img src="19.png" alt="DTI" width="100">
+    <img src="gallery1.jpg" alt="Gallery1">
+    <img src="gallery2.jpg" alt="Gallery2">
+    <img src="gallery3.jpg" alt="Gallery3">
+    <img src="gallery4.jpg" alt="Gallery4">
+    <img src="gallery5.jpg" alt="Gallery5">
+    <img src="gallery6.jpg" alt="Gallery6">
   </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Location: Hi-way, Balitoc, Calatagan, Batangas</p>
-    <p>Email: jmbprintingservices12@gmail.com</p>
-    <p>Facebook Page: JMB Printing Services</p>
+  <section class="section">
+    <h2>Certification Registration</h2>
+    <img src="E:\IKAGES/DTI CERTIFICATE.jpg" alt="Certification" width="300">
   </section>
 
-  <section id="activities">
-    <h2>Latest Activities & Announcements</h2>
-    <p>[Add your latest activities here]</p>
+  <section id="profile" class="section">
+    <h2>Profile</h2>
+    <p><strong>Admin:</strong> Jorenz M. Balbuena</p>
+    <img src="E:\IKAGES/ADMIN.png" alt="Admin Picture" width="200">
+    <p>Signature:</p>
+    <img src="E:\BACGROUND/download (1).png" alt="Signature" width="200">
+    <h3>Location Map</h3>
+    <iframe src="https://www.google.com/maps/embed?..."></iframe>
   </section>
 
-  <section id="download">
-    <h2>Download</h2>
-    <p>[Add files for download here]</p>
+  <section id="activity" class="section">
+    <h2>Latest Activity & Announcements</h2>
+    <p>Stay tuned for updates!</p>
   </section>
 
-  <section>
-    <h2>Loyalty Card ID Registration</h2>
-    <form onsubmit="return register()">
-      <input placeholder="SURNAME" required><br>
-      <input placeholder="GIVEN NAME" required><br>
-      <input placeholder="MIDDLE NAME" required><br>
-      <input placeholder="ADDRESS" required><br>
-      <input placeholder="CONTACT NUMBER" required><br>
-      <input placeholder="EMAIL ADDRESS" required><br>
-      <button type="submit">Submit</button>
+  <section id="registration" class="section">
+    <h2>Loyalty Card Registration</h2>
+    <form id="loyaltyForm">
+      <h3>Step 1: Personal Info</h3>
+      <input type="text" placeholder="Surname" required><br>
+      <input type="text" placeholder="Given Name" required><br>
+      <input type="text" placeholder="Middle Name"><br>
+      <input type="text" placeholder="Suffix"><br>
+      <input type="text" placeholder="Address"><br>
+      <input type="text" placeholder="Blood Type"><br>
+
+      <h3>Step 2: Upload Photo</h3>
+      <input type="file" accept="image/*" required><br>
+
+      <h3>Step 3: Upload or Draw Signature</h3>
+      <input type="file" accept="image/*"><br>
+      <canvas id="signaturePad" width="400" height="200" style="background:white;"></canvas><br>
+      <button type="button" onclick="clearCanvas()">Clear Signature</button><br>
+
+      <h3>Step 4: Submit</h3>
+      <button type="button" onclick="submitForm()">Submit</button>
     </form>
-    <p>Note: Your Loyalty Card ID will be delivered in 3-4 months.</p>
   </section>
 
-  <footer>
-    &copy; 2025 JMB Printing Services All rights reserved
-  </footer>
+  <section class="section">
+    <h2>Calendar & Philippine Standard Time</h2>
+    <p>Philippine Holidays apply.</p>
+    <iframe src="https://calendar.google.com/calendar/embed?src=en.philippines%23holiday%40group.v.calendar.google.com"></iframe>
+  </section>
+</main>
 
-  <script>
-    const items = [
-      ["ID RUSH 1",40,"pic1.png"],["ID RUSH 2",50,"pic2.png"],["ID RUSH 3",55,"pic3.png"],["ID RUSH 4",55,"pic4.png"],
-      ["ID RUSH 5",65,"pic5.png"],["ID RUSH 6",65,"pic6.png"],["ID RUSH 7",65,"pic7.png"],["ID RUSH 8",65,"pic8.png"],
-      ["PHOTO PRINT 1",70,"pic9.png"],["PHOTO PRINT 2",70,"pic10.png"],["PHOTO PRINT 3",75,"pic11.png"],["PHOTO PRINT 4",85,"pic12.png"],
-      ["PHOTO PRINT 5",85,"pic13.png"],["PHOTO PRINT 6",85,"pic14.png"],["PHOTO PRINT 7",90,"pic15.png"],["PHOTO PRINT 8",60,"pic16.png"],
-      ["PHOTO PRINT 9",90,"pic17.png"],["A4(COLORED)",5,"pic18.png"],["A4(B&W)",5,"pic19.png"],["SHORT(COLORED)",5,"pic20.png"],
-      ["SHORT(B&W)",5,"pic21.png"],["LONG(COLORED)",5,"pic22.png"],["LONG(B&W)",5,"pic23.png"],["LAMINATE",35,"pic24.png"],["BOOKBINDING",100,"pic25.png"]
-    ];
-    const pricingTable = document.getElementById('pricing');
-    const cartList = document.getElementById('cart');
-    const totalSpan = document.getElementById('total');
-    let cart = [];
+<footer>
+  <p>Contact us: 09931109148 | Email: JMBPRINTINGSERVICES12@GMAIL.COM</p>
+  <p><a href="https://web.facebook.com/profile.php?id=61577415907805/">Facebook Page</a></p>
+  <p>© 2025 JMB PRINTING SERVICES All Right Reserved</p>
+</footer>
+
+<script>
+  const items = [
+    ["ID RUSH 1",40],["ID RUSH 2",50],["ID RUSH 3",55],["ID RUSH 4",55],
+    ["ID RUSH 5",65],["ID RUSH 6",65],["ID RUSH 7",65],["ID RUSH 8",65],
+    ["PHOTO PRINT 1",70],["PHOTO PRINT 2",70],["PHOTO PRINT 3",75],
+    ["PHOTO PRINT 4",85],["PHOTO PRINT 5",85],["PHOTO PRINT 6",85],
+    ["PHOTO PRINT 7",90],["PHOTO PRINT 8",60],["PHOTO PRINT 9",90],
+    ["A4(COLORED)",5],["A4(B&W)",5],["SHORT(COLORED)",5],
+    ["SHORT(B&W)",5],["LONG(COLORED)",5],["LONG(B&W)",5],
+    ["LAMINATE",35],["BOOKBINDING",300]
+  ];
+
+  let cart = [];
+
+  const table = document.getElementById("itemsTable");
+  items.forEach((item, index) => {
+    const row = table.insertRow();
+    row.insertCell(0).textContent = item[0];
+    row.insertCell(1).textContent = item[1];
+    const qty = document.createElement("input");
+    qty.type = "number"; qty.min = "1"; qty.value = "1";
+    row.insertCell(2).appendChild(qty);
+    const btn = document.createElement("button");
+    btn.textContent = "Add to Cart";
+    btn.onclick = () => {
+      cart.push([item[0], item[1], qty.value]);
+      alert(`${item[0]} x${qty.value} added!`);
+    };
+    row.insertCell(3).appendChild(btn);
+  });
+
+  function viewCart() {
+    let msg = "Cart:\n";
     let total = 0;
-
-    items.forEach((item,i)=>{
-      const row = document.createElement('tr');
-      row.innerHTML = `<td>${item[0]}</td><td>${item[1]}</td><td><img src="${item[2]}" width="50"></td>
-        <td><input id="qty${i}" type="number" min="1" value="1"></td>
-        <td><button onclick="addToCart(${i})">Add</button></td>`;
-      pricingTable.appendChild(row);
+    cart.forEach(i => {
+      msg += `${i[0]} x${i[2]} - ₱${i[1]*i[2]}\n`;
+      total += i[1]*i[2];
     });
+    msg += `Total: ₱${total}`;
+    alert(msg);
+  }
 
-    function addToCart(i) {
-      const qty = parseInt(document.getElementById(`qty${i}`).value);
-      cart.push({name: items[i][0], price: items[i][1], qty: qty});
-      total += items[i][1]*qty;
-      updateCart();
-    }
+  function checkout() {
+    let order = "Order Details:\n";
+    let total = 0;
+    cart.forEach(i => {
+      order += `${i[0]} x${i[2]} - ₱${i[1]*i[2]}\n`;
+      total += i[1]*i[2];
+    });
+    order += `Total: ₱${total}\n\n`;
+    order += "Payment:\nBPI 0909317916 JORENZ M. BALBUENA\nGCASH 09931109148 JORENZ M. BALBUENA";
+    window.location.href = `mailto:JMBPRINTINGSERVICES12@GMAIL.COM?subject=Order&body=${encodeURIComponent(order)}`;
+  }
 
-    function updateCart() {
-      cartList.innerHTML = '';
-      cart.forEach(it=>{
-        const li = document.createElement('li');
-        li.textContent = `${it.name} x${it.qty} = ₱${it.price*it.qty}`;
-        cartList.appendChild(li);
-      });
-      totalSpan.textContent = total;
-    }
+  // Canvas Drawing
+  const canvas = document.getElementById('signaturePad');
+  const ctx = canvas.getContext('2d');
+  let drawing = false;
+  canvas.onmousedown = () => drawing = true;
+  canvas.onmouseup = () => drawing = false;
+  canvas.onmousemove = (e) => {
+    if (!drawing) return;
+    ctx.fillRect(e.offsetX, e.offsetY, 2, 2);
+  };
+  function clearCanvas() { ctx.clearRect(0, 0, canvas.width, canvas.height); }
 
-    function checkout() {
-      window.location.href = `mailto:jmbprintingservices12@gmail.com?subject=Order&body=Order Total: ₱${total}`;
-    }
-
-    function register() {
-      alert("Form submitted. Note: Your Loyalty Card ID will be delivered in 3-4 months.");
-      return false;
-    }
-
-    function updateClock() {
-      const now = new Date();
-      let hr = now.getHours();
-      let min = now.getMinutes();
-      let sec = now.getSeconds();
-      const ampm = hr >= 12 ? "PM" : "AM";
-      hr = hr % 12 || 12;
-      document.getElementById("clock").textContent =
-        `${hr.toString().padStart(2,0)}:${min.toString().padStart(2,0)}:${sec.toString().padStart(2,0)} ${ampm}`;
-    }
-    setInterval(updateClock, 1000);
-  </script>
+  function submitForm() {
+    alert("Submitted! Your loyalty card ID will be emailed.");
+  }
+</script>
 
 </body>
 </html>
